# avroschema

./: .pre-commit-config.yaml  README.md  pyproject.toml
avroschema/: __init__.py  fields.py  schema.py  utils.py
tests/: __init__.py  test_fields.py
