[tool.poetry]
name = "marshmallow-avro"
version = "0.1.0"
description = "Extension of marshmallow to define Apache Avro schemas"
authors = ["Ralf Grubenmann <ralf.grubenmann@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "marshmallow_avro"}]

[tool.poetry.dependencies]
python = "^3.8"
fastavro = "^1.6.0"
marshmallow = "^3.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
