[tool.poetry]
name = "avroschema"
version = "0.1.0"
description = "Library to allow defining avro schemas with python code."
authors = ["Ralf Grubenmann <ralf.grubenmann@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "avroschema"}]

[tool.poetry.dependencies]
python = "^3.8"
fastavro = "^1.6.0"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
